# Popoly

./: .env.example  .gitignore  LICENSE  pyproject.toml
popoly/: __init__.py  __main__.py  config.py  types.py
popoly/dashboard/: display.py
popoly/execution/: claim_manager.py  ctf.py  executor.py  paper_trader.py  position_manager.py
popoly/feeds/: binance_ws.py  polymarket_clob.py  price_cache.py
popoly/notifications/: telegram.py
popoly/risk/: __init__.py  kill_switch.py  portfolio.py  risk_gate.py
popoly/storage/: database.py
popoly/strategy/: confidence.py  kelly.py  opportunity.py
popoly/utils/: logging_config.py  rate_limiter.py  retry.py
